--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title{
@@ -43,4 +44,18 @@ nav li{
 nav a{
     text-decoration: none;
     color: #474747;
+}
+
+.header{
+    background-color: #fff8f3;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px ;
+    display: flex;
+    align-items: center;
+}
+
+.banner .DP{
+    width: 500px;
 }
