--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,8 @@ body{
   font-family: 'Lato',sans-serif;
   
 }
+/* shared section  */
+
 .text-primary{
     color: #fd6e0a;
 }
@@ -16,6 +18,19 @@ body{
     font-size: 20px;
     font-weight: 700;
     padding: 15px 35px;
+}
+
+.section-title{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 nav {
@@ -57,7 +72,7 @@ nav a{
     justify-content: space-between;
 }
 
-.banner-contan{
+.banner-content{
     max-width: 500px;
 }
 .banner .DP{
@@ -76,6 +91,15 @@ nav a{
     margin-bottom: 20px;
 }
 
+/* main section style  */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+main section{
+    margin-top: 130px;
+}
 
 .about{
     padding: 130px;
@@ -84,28 +108,48 @@ nav a{
     margin: 130px;
 }
 
-.section-title{
-    color: #181818;
-    text-align: center;
-    font-size: 35px;
-    font-weight: 700;
-}
-
-.section-description{
-    color: #757575;
-    text-align: center;
-    font-size: 18px;
-}
-
 .about-info-container{
     display: flex;
     justify-content: space-around;
-}.
+}
 
-.about-inf{
+.about-info{
     text-align: center;
 }
 
-.inf-title{
+.info-title{
     text-align: center;
 }
+
+/* Skill related style  */
+
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+.skill-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background:#fff ;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+}
+
+.skill-description{
+    color: #757575;
+}
+
+
+/* Resume section  */
+.resume-column-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+
