--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -153,3 +153,22 @@ main section{
 }
 
 
+.resume-container{
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.resume-institute, .resume-item-description{
+color: #757575;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
