--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -177,8 +177,33 @@ color: #757575;
 
 footer{
     display: flex;
+    gap: 100px;
     background: #fff8f3;
     margin-top: 100px;
     padding: 130px 200px;
 
+}
+
+.footer-column{
+    width: 50%;
+}
+
+.section-description{
+    text-align: left;
+}
+
+.social-links a{
+    margin-right: 30px;
+}
+
+.contact input[type="text"], .contact input[type="email"],
+ textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #474747;
+    border-radius: 5px;
+    background: #fff;
+    border: 0;
+    width: 100%;
 }
