--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -63,6 +63,9 @@ nav a{
 
 .header{
     background-color: #fff8f3;
+    background-image: url(../images/header_bg.png), url(../images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right,top left;
 }
 
 .banner{
@@ -70,6 +73,7 @@ nav a{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .banner-content{
@@ -207,3 +211,70 @@ footer{
     border: 0;
     width: 100%;
 }
+
+/* Mobile / Small Device  */
+
+@media screen and (max-width: 576px) {
+
+        nav{
+            flex-direction: column;
+        }
+        .header{
+            background-image: none;
+        }
+
+        .banner{
+            flex-direction: column;
+            padding: 30px 30px 0px 10px ;
+        }
+
+        .banner .DP{
+            width: 400px;
+        
+        }
+
+        .btn-contact{
+            margin-top: 10px;
+        }
+
+        .about{
+            margin: 30px 0px 0px 0px;
+            padding: 30px;
+            
+        }
+
+        .about-info-container{
+            flex-direction: column;
+        }
+
+        #what-i-do-description{
+            padding: 20px 20px;
+        
+        }
+
+        .skill-container{
+            flex-direction: column;
+        }
+
+        .resume-container{
+            flex-direction: column;
+            margin-left: 20px;
+        }
+
+        footer{
+            flex-direction: column;
+            gap: 50px;
+            margin-top: 50px;
+            padding: 20px 20px;
+        }
+
+        .footer-column{
+            width: 80%;
+        }
+
+
+
+
+
+
+    }        
